<resources>

    <string name="not_mobile_format">手机号码格式不正确</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_error">验证码不正确</string>
    <string name="input_password_count">请输入6-18位密码</string>
    <string name="password_inconformity">两次密码输入不一致</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>

    <string name="app_ok">确定</string>
    <string name="app_name">币澜财经</string>
    <string name="home">首页</string>
    <string name="developing">开发中</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="say_something">亲，说点什么吧...</string>
    <string name="publish_dynamic">发表动态</string>
    <string name="publish_article">发表文章</string>
    <string name="discover">发现</string>
    <string name="input_name">请输入姓名</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="reviews_num">%1$s条评论</string>
    <string name="personal_data">个人资料</string>
    <string name="sure">确定</string>
    <string name="logout_tips">确认要退出?</string>
    <string name="time">2017-12-25 12:33:55</string>
    <string name="temp_text">你在他乡还好吗？</string>
    <string name="input_comment">请输入评论内容</string>
    <string name="attention">关注</string>
    <string name="attentioned">已关注</string>
    <string name="bt_grade">比特%1$s级</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="cancel_collected">已取消收藏</string>
    <string name="comm_num">评论%1$s</string>
    <string name="fans">粉丝%1$s</string>
    <string name="follow">关注%1$s</string>
    <string name="price">价格：￥%1$s/个</string>
    <string name="price_sub">￥%1$s</string>
    <string name="price_fu">-%1$s</string>
    <string name="price_zheng">+%1$s</string>
    <string name="price_sub_value">￥0</string>
    <string name="num">数量：%1$s</string>
    <string name="days">第%1$s天</string>
    <string name="integral">+%1$s</string>
    <string name="publish">发布</string>
    <string name="my_follow">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="publish_succeed">发布成功</string>
    <string name="my_publish">我的发布</string>
    <string name="my_article">我的文章</string>
    <string name="about_btcim">关于BTCIM</string>
    <string name="app_recommend">应用推荐</string>
    <string name="my_dynamic">我的动态</string>
    <string name="is_follow_gong">确定要关注该公众号？</string>
    <string name="is_no_follow_gong">确定要取消关注该公众号？</string>
    <string name="is_follow_ming">确定要关注该名人堂？</string>
    <string name="is_no_follow_ming">确定要取消关注该名人堂？</string>
    <string name="is_follow">确定要关注？</string>
    <string name="is_no_follow">确定要取消关注？</string>
    <string name="friends">好友</string>
    <string name="send_message">发消息</string>
    <string name="new_friends">新的朋友</string>
    <string name="interested_people">可能感兴趣的人</string>
    <string name="is_add_friend">确定要添加其为好友?</string>
    <string name="send_code_succeed">验证码发送成功</string>
    <string name="send_info">您好%1$s ：欢迎你来到场外发布中心，现在有%2$s币种%3$s数量%4$s个，交易价格：%5$s元/个，发布交易时间：%6$s ,有什么交易相关问题，随时可以咨询我们，谢谢！</string>
    <string name="withdraw_deposit">提现</string>
    <string name="add_withdraw_account">添加提现账户</string>
    <string name="all">全部</string>
    <string name="done">已完成</string>
    <string name="no_done">未完成</string>
    <string name="my_order">我的订单</string>
    <string name="delete_order">删除订单</string>
    <string name="zan_succeed">点赞成功</string>
    <string name="order_details">订单详情</string>
    <string name="order_num">订单号：%1$s</string>
    <string name="name">姓名：郭美美</string>
    <string name="phone">电话：10010</string>
    <string name="address">联系地址：广州市天河区科韵路101号</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="search_friends">搜索好友</string>
    <string name="search_qun">搜索群</string>
    <string name="wait_harvest">待收货</string>
    <string name="no_pay">未支付</string>
    <string name="selled">已购买%1$s</string>
    <string name="she_name_num">%1$s(%2$s)</string>
    <string name="isJoinGroup">你还没有加入该群，是否要加入？</string>
    <string name="join_succeed">请求加入群成功</string>
    <string name="wait_verify">已申请添加，等待群主验证</string>
    <string name="spply_to_group">%1$s申请加入群%2$s,是否同意？</string>
    <string name="online_service">在线客服</string>
    <string name="pay_num">已有%1$s人购买</string>
    <string name="comment_num">商品评价(%1$s)</string>
    <string name="shop">购物车</string>
    <string name="total_cash"><![CDATA[合计 :<font color="#ff2456">￥%s</font>]]></string>
    <string name="edit">编辑</string>
    <string name="balance">去结算</string>
    <string name="confirm">确定</string>
    <string name="add">添加</string>
    <string name="input_reception_name">请输入收货人姓名</string>
    <string name="input_details_address">请输入详细地址</string>
    <string name="choose_address">请选择收货地址</string>
    <string name="lack_parameter">缺少参数</string>
    <string name="goods_num">共计%1$s件商品</string>
    <string name="jian">件</string>
    <string name="input_recharge_money">请输入充值金额</string>
    <string name="choose_recharge_money">请选择充值金额</string>
    <string name="input_brank_num">请输入银行卡号</string>
    <string name="input_kaihu">请输入开户名</string>
    <string name="input_id">请输入收款人ID</string>
    <string name="input_ji">请输入转出积分</string>
    <string name="input_remark">请输入备注</string>
    <string name="change_phone_code">验证码以短息方式发送至您的手机，请在60s内输入验证码！</string>
    <string name="is_default">默认</string>
    <string name="set_default">设为默认</string>
    <string name="contact_merchant">联系商家</string>
    <string name="refund">退款</string>
    <string name="affirm_receive">确认收货</string>
    <string name="five_character">亲，评论内容五个字以上</string>
    <string name="transfer">转出</string>
    <string name="submit">提交</string>
    <string name="api_url">http://openapi.hksy.com/app/coinMarket/v1/selectCoinMarketbyCoinName</string>
    <string name="wan">万</string>
    <string name="no_location">不显示位置</string>
    <string name="limit_char">限制250个字</string>
    <string name="market_bi_url2">http://demo.168erp.cn/api/Price/getList</string>
    <string name="friend">好友</string>
    <string name="download">下载</string>
    <string name="lihao">利好%1$s</string>
    <string name="likong">利空%1$s</string>
    <string name="num_up">$%1$s↑</string>
    <string name="num_down">$%1$s↓</string>
    <string name="range">%</string>
    <string name="input_article_title">请输入文章标题</string>
    <string name="input_article_content">请输入文章内容</string>
    <string name="num_500">%1$s/500</string>
    <string name="tang_balance">糖果余额：%1$s</string>
    <string name="top">置顶</string>
    <string name="copy_succeed">已复制到剪贴板</string>
    <string name="total_candies"><![CDATA[累计获得 : <font color="#feb700">%s</font> BL糖果]]></string>
    <string name="invite_friend">邀请好友赚糖果</string>
    <string name="essential">精华</string>
    <string name="recommend">推荐</string>
    <string name="advertising">广告</string>
</resources>
