<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.login.RegisterActivity">

    <include layout="@layout/include_centertitletoolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_name"
                style="@style/ll_no_border"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/d_50dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text"
                    android:src="@mipmap/icon_phone" />


                <com.xson.common.widget.DrawClickableEditText
                    android:id="@+id/user_name_et"
                    android:text="熊"
                    style="@style/editText_bottom_style"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/input_name"
                    android:paddingRight="15dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/ll_no_border"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/d_50dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text"
                    android:src="@mipmap/icon_phone" />


                <com.xson.common.widget.DrawClickableEditText
                    android:id="@+id/phone_et"
                    style="@style/editText_bottom_style"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingRight="15dp" />


            </LinearLayout>

            <LinearLayout
                style="@style/ll_no_border"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text"
                    android:src="@mipmap/icon_code" />


                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    style="@style/ll_bottom">


                    <com.xson.common.widget.DrawClickableEditText
                        android:id="@+id/code_et"
                        style="@style/editText_bottom_style"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/d_5dp"
                        android:hint="@string/input_code"
                        android:inputType="number"
                        android:maxLength="6" />

                    <Button
                        android:id="@+id/obtainCode_bt"
                        android:layout_width="93dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/code_shape"
                        android:text="@string/obtain_code"
                        android:textColor="@color/color999" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/ll_no_border"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text"
                    android:src="@mipmap/icon_pwd" />

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    style="@style/ll_bottom">


                    <com.xson.common.widget.DrawClickableEditText
                        android:id="@+id/pwd_et"
                        style="@style/editText_bottom_style"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/d_15dp"
                        android:hint="@string/input_password_count"
                        android:inputType="textPassword"
                        android:maxLength="18" />

                    <ImageView
                        android:id="@+id/showPwd_iv"
                        style="@style/text"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/pwd_off" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/ll_no_border"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text"
                    android:src="@mipmap/icon_pwd" />


                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    style="@style/ll_bottom">


                    <com.xson.common.widget.DrawClickableEditText
                        android:id="@+id/pwd_again_et"
                        style="@style/editText_bottom_style"
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/d_15dp"
                        android:hint="@string/input_pwd_again"
                        android:inputType="textPassword"
                        android:maxLength="18" />

                    <ImageView
                        android:id="@+id/showPwd_again_iv"
                        style="@style/text"
                        android:visibility="gone"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/pwd_off" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_referrer_phone"
                style="@style/ll_no_border"
                android:layout_marginLeft="15dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    style="@style/text"
                    android:src="@mipmap/icon_phone" />


                <com.xson.common.widget.DrawClickableEditText
                    android:id="@+id/referrer_phone_et"
                    style="@style/editText_bottom_style"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:hint="推荐人手机号或ID（选填）"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:paddingRight="15dp" />


            </LinearLayout>

            <Button
                android:id="@+id/register_bt"
                style="@style/button_style"
                android:layout_marginTop="50dp"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
